[package]
name = "saw"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
bytes = "^1.1.0"
futures-util = { version="^0.3", features=["io"] }
parking_lot = "^0.11"
serde = "^1.0"
serde_json = "^1.0"
termcolor = "1.1.2"
tokio = { version = "^1.10", features=["rt", "rt-multi-thread", "macros", "sync"] }
